--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,12 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile group:'google', name: 'guava', version: '23'
+
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    compile group: 'com.google.guava', name: 'guava', version: '23.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
 }
 
 jar {
