--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
+
+plugins {
+    id 'com.github.johnrengelman.shadow' version '2.0.1'
+    id 'java'
+}
+
 group 'de.sfb876'
 version '0.1.0-SNAPSHOT'
 
+
+
+//apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
@@ -10,6 +19,7 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -17,9 +27,20 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '23.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-
+    compile group: 'org.apache.flink', name: 'flink-java', version: '1.3.2'
+    compile group: 'org.apache.flink', name: 'flink-streaming-java_2.10', version: '1.3.2'
 }
 
-jar {
+shadowJar {
     baseName = 'jayct'
+    manifest {
+        attributes 'Main-Class': 'flink.Test'
+    }
+
+    dependencies {
+        include(dependency('org.apache.commons:commons-math3'))
+        include(dependency('com.google.guava:guava'))
+        include(dependency('com.google.code.gson:gson'))
+    }
+    relocate 'org.apache.commons', 'org.shaded.apache.commons'
 }
