--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,27 @@
 
 plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.1'
+    id 'me.champeau.gradle.jmh' version '0.4.3'
     id 'java'
+
 }
 
-group 'de.sfb876'
-version '0.1.0-SNAPSHOT'
 
 
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'idea'
 
-//apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'java'
+    group 'de.sfb876'
+    version '0.1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
-repositories {
-    mavenCentral()
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
 }
 
 
@@ -29,6 +34,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile group: 'org.apache.flink', name: 'flink-java', version: '1.3.2'
     compile group: 'org.apache.flink', name: 'flink-streaming-java_2.10', version: '1.3.2'
+    compile group: 'org.jpmml', name: 'pmml-evaluator', version: '1.3.9'
 }
 
 shadowJar {
@@ -43,4 +49,12 @@ shadowJar {
         include(dependency('com.google.code.gson:gson'))
     }
     relocate 'org.apache.commons', 'org.shaded.apache.commons'
+}
+
+
+apply plugin: 'me.champeau.gradle.jmh'
+jmh {
+    warmupIterations = 5
+    iterations = 5
+    fork = 5
 }
