--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile group: 'org.apache.flink', name: 'flink-java', version: '1.3.2'
     compile group: 'org.apache.flink', name: 'flink-streaming-java_2.10', version: '1.3.2'
-    compile group: 'org.jpmml', name: 'pmml-evaluator', version: '1.3.9'
+    testCompile group: 'org.jpmml', name: 'pmml-evaluator', version: '1.3.9'
 }
 
 shadowJar {
@@ -43,11 +43,15 @@ shadowJar {
         attributes 'Main-Class': 'flink.Test'
     }
 
-    dependencies {
-        include(dependency('org.apache.commons:commons-math3'))
-        include(dependency('com.google.guava:guava'))
-        include(dependency('com.google.code.gson:gson'))
+    transform(com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer) {
+        resource = 'reference.conf'
     }
+
+//    dependencies {
+//        include(dependency('org.apache.commons:commons-math3'))
+//        include(dependency('com.google.guava:guava'))
+//        include(dependency('com.google.code.gson:gson'))
+//    }
     relocate 'org.apache.commons', 'org.shaded.apache.commons'
 }
 
