--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile group: 'org.apache.flink', name: 'flink-java', version: '1.3.2'
     compile group: 'org.apache.flink', name: 'flink-streaming-java_2.10', version: '1.3.2'
+    compile group: 'info.picocli', name: 'picocli', version: '1.0.1'
+
     testCompile group: 'org.jpmml', name: 'pmml-evaluator', version: '1.3.9'
 }
 
