--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
   - "3.5"
 
 before_install:
-- pip install pyro4
-- pip install git+https://github.com/cta-observatory/pyhessio
-- pip install git+https://github.com/cta-observatory/ctapipe-extra
-- pip install git+https://github.com/cta-observatory/ctapipe
-- pip install numpy
-- pip install astropy
+- pip3 install pyro4
+- pip3 install git+https://github.com/cta-observatory/pyhessio
+- pip3 install git+https://github.com/cta-observatory/ctapipe-extra
+- pip3 install git+https://github.com/cta-observatory/ctapipe
+- pip3 install numpy
+- pip3 install astropy
