--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile group: 'org.apache.flink', name: 'flink-streaming-java_2.10', version: '1.3.2'
     compile group: 'info.picocli', name: 'picocli', version: '1.0.1'
     compile group: 'net.razorvine', name:'pyrolite', version: '4.+'
+    compile 'me.tongfei:progressbar:0.6.0'
 
     testCompile group: 'org.jpmml', name: 'pmml-evaluator', version: '1.3.9'
 }
@@ -43,7 +44,7 @@ dependencies {
 shadowJar {
     baseName = 'jayct'
     manifest {
-        attributes 'Main-Class': 'flink.Test'
+        attributes 'Main-Class': 'flink.DistributeImages'
     }
 
     transform(com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer) {
