--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,9 @@
 
 plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.1'
-    id 'me.champeau.gradle.jmh' version '0.4.3'
     id 'java'
 
 }
-
 
 
 allprojects {
@@ -35,7 +33,6 @@ dependencies {
     compile group: 'org.apache.flink', name: 'flink-java', version: '1.3.2'
     compile group: 'org.apache.flink', name: 'flink-streaming-java_2.10', version: '1.3.2'
     compile group: 'info.picocli', name: 'picocli', version: '1.0.1'
-    compile group: 'net.razorvine', name:'pyrolite', version: '4.+'
 
     testCompile group: 'org.jpmml', name: 'pmml-evaluator', version: '1.3.9'
 }
@@ -59,9 +56,9 @@ shadowJar {
 }
 
 
-apply plugin: 'me.champeau.gradle.jmh'
-jmh {
-    warmupIterations = 5
-    iterations = 5
-    fork = 5
-}
+//apply plugin: 'me.champeau.gradle.jmh'
+//jmh {
+//    warmupIterations = 5
+//    iterations = 5
+//    fork = 5
+//}
