--- a/python/Makefile
+++ b/python/Makefile
@@ -1,5 +1,6 @@
-SIMTEL_FILE = ../../cta_rta_analysis/data/raw/gamma_20deg_0deg_run6911___cta-prod3-merged_desert-2150m-Paranal-3HB89-NGFD.simtel.gz
+SIMTEL_FILE = ../../hb9/gamma_20deg_180deg_run1000___cta-prod3_desert-2150m-Paranal-merged.simtel.gz
 
 all:
 	python array_definitions.py $(SIMTEL_FILE) ../src/main/resources/array_definitions/cta_array_definition.json
 	python camera_definitions.py $(SIMTEL_FILE) ../src/main/resources/camera_definitions/cta_camera_definition.json
+	python convert_raw_data.py $(SIMTEL_FILE) ../src/main/resources/data/images.json.gz --limit 10
